# fsrs-browser

./: .gitmodules  Cargo.toml  README.md  build-for-web.sh  build.sh  bumpVersion.sh  check.sh  dev.sh  index.html  prepublish.sh  prod.sh  run-server.sh  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: build.yml  main.yml  playwright.yml  pr.yml  publish.yml  sync-with-fsrs-rs.yml
js/: foo.js
sandbox/: .gitignore  README.md  package.json  playwright.config.ts  pnpm-lock.yaml  postinstall.sh  vite.config.ts
sandbox/src/: App.tsx  cheatsheet.scss  index.tsx  testSerialization.ts  train.ts
sandbox/tests/: dev.spec.ts  prod.spec.ts  util.ts
src/: lib.rs
