[package]
name = "fsrs-browser"
version = "0.6.1"
edition = "2021"
authors = ["Open Spaced Repetition"]
categories = ["algorithms", "science"]
homepage = "https://github.com/open-spaced-repetition"
keywords = ["spaced-repetition", "algorithm", "fsrs", "machine-learning"]
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/open-spaced-repetition/fsrs-browser"
description = "FSRS for the browser, including Optimizer and Scheduler"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
console_log = { version = "1" }
log = { default-features = false, version = "0.4.20" }
wasm-bindgen = "0.2.91"
getrandom = { version = "0.2", features = ["js"] }

[dependencies.fsrs]
path = "./fsrs-rs"
# git = "https://github.com/open-spaced-repetition/fsrs-rs.git"
# rev = "5d67e1c0c82e56b49e3c9b3403da4ce703823b5f"

[dependencies.burn]
# version = "0.10.0"
git = "https://github.com/open-spaced-repetition/burn.git"
rev = "404858e4db95c8f6ecd1d50d274aaf223c7bc1a7"
# path = "./burn/burn"
default-features = false
features = ["std", "train", "autodiff", "wasm-sync", "browser", "ndarray"]

[profile.release]
codegen-units = 1
lto = "fat"
